--- a/css/works.css
+++ b/css/works.css
@@ -255,4 +255,11 @@
 	.opinions-slider {	
 		gap: 0;
 	}
+	.opinion-card img {
+		object-fit: cover;
+	
+		width: 100px;
+		height: 100px;
+		border-radius: 50%;
+	}
 }
