--- a/css/awards.css
+++ b/css/awards.css
@@ -26,6 +26,7 @@
 	order: 2;
 	will-change: transform;
 
+	aspect-ratio: 1 / 1;
 	max-width: calc(var(--index) * 10);
 }
 .awards-title-photo img {
@@ -106,11 +107,14 @@
 		margin: auto;
 	}
 	.awards-title h2 {
-		order: 2;
 		font-size: 5em;
+		order: 2;
 	}
 	.awards-title-photo {
 		order: 1;
+	}
+	.awards-content-description-text {
+		gap: 10px;
 	}
 	.awards-content-description-text h3 {
 		font-size: 3em;
