--- a/css/insights.css
+++ b/css/insights.css
@@ -17,12 +17,12 @@
 	justify-content: space-between;
 	align-items: center;
 }
-.insights-title-left h2 {
-	font-size: 3em;
-}
 .insights-title-left {
 	display: flex;
 	flex-direction: row;
+}
+.insights-title-left h2 {
+	font-size: 3em;
 }
 .insights-title-index {
 	color: var(--grey-color);
@@ -80,7 +80,7 @@
 	background-color: var(--grey-color);
 
 	width: 100%;
-	height: 50vh;
+	aspect-ratio: 2 / 1;
 	border-radius: 20px;
 }
 .insights-content-description-text {
@@ -103,6 +103,9 @@
 		width: 100%;
 		gap: 10px;
 	}
+	.insights-title-left {
+		margin: auto;
+	}
 	.insights-title-arrow {
 		width: 40%;
 		height: 80px;
@@ -112,9 +115,6 @@
 		text-align: center;
 		width: 100%;
 		padding-bottom: 20px;
-	}
-	.insights-content-description-photo {	
-		height: 40vh;
 	}
 	.insights-content-description-text h2 {
 		font-size: 2em;
@@ -142,7 +142,7 @@
 		padding-bottom: 20px;
 	}
 	.insights-content-description-photo {	
-		height: 40vh;
+		aspect-ratio: 1 / 1;
 	}
 	.insights-content-description-text h2 {
 		font-size: 2em;
